# VMEffects

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/VMEffects/: BasicType.h  EngineInfo.h  EngineType.h  IBuffer.h  IBufferView.h  ICommandList.h  IContext.h  IDevice.h  IDeviceContext.h  IDeviceObject.h  IEngineFactory.h  IFence.h  IPipeline.h  ISampler.h  IShader.h  ISwapChain.h  ITexture.h  ITextureView.h
include/VMEffectsVulkan/: IBufferViewVk.h  IBufferVk.h  ICommandQueueVk.h  IContextVk.h  IDeviceVk.h  IEngineFactoryVk.h  IFenceVk.h  ISwapChainVk.h  ITextureViewVk.h  ITextureVk.h
include/VMEffectsVulkan/VulkanWrapper/: InstanceVk.h  LogicalDevickVk.h  MemoryManagerVk.h  PhysicalDeviceVk.h  VulkanFencePool.h  VulkanObjectWrapper.h  VulkanUtilsFunctions.h
src/: CMakeLists.txt
src/VMEffects/: BufferBase.cpp  BufferBase.hpp  CMakeLists.txt  ContextBase.cpp  ContextBase.hpp  DeviceBase.hpp  DeviceObjectImpl.cpp  DeviceObjectImpl.hpp  EngineFactoryBase.hpp  EngineInfo.cpp  FenceBase.hpp  SwapChainImpl.cpp  SwapChainImpl.hpp  TextureBase.hpp
src/VMEffectsVulkan/: BufferVkImpl.hpp  CMakeLists.txt  COmmandQueueVkImpl.cpp  CommandPoolManager.cpp  CommandPoolManager.hpp  CommandQueueVkImpl.cpp  CommandQueueVkImpl.hpp  ContextVkImpl.cpp  ContextVkImpl.hpp  DeviceVkImpl.cpp  DeviceVkImpl.hpp  EngineFactoryVkImpl.cpp  EngineFactoryVkImpl.hpp  EngineTypeMappingVk.cpp  EngineTypeMappingVk.hpp  FenceVkImpl.cpp  FenceVkImpl.hpp  SwapChainVkImpl.cpp  SwapChainVkImpl.hpp  TextureVkImpl.cpp  TextureVkImpl.hpp
src/VMEffectsVulkan/VulkanWrapper/: InstanceVk.cpp  LogicalDeviceVk.cpp  MemoryManagerVk.cpp  PhysicalDeviceVk.cpp  VulkanFencePool.cpp  VulkanUtilsFunctions.cpp
test/: CMakeLists.txt  test.cpp
